remove quantiles slides + minor changes

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ le 50eme => valeur médiane
 </section>
 
 
-
+<!--
 <section data-transition="fade-in">	
 	<h3>Quantiles, quartiles et centiles</h3>
 	<h3>&nbsp;</h3>
@@ -247,6 +247,7 @@ le 50eme => valeur médiane
 	<h3>&nbsp;</h3>
 	<h3>13 22 <span style="color: red">28</span> 36 42 <span style="color: red">45</span> 49 50 <span style="color: white; background: black">77</span> 81 90</h3>
 </section>
+-->
 
 <!--
 <section data-background="brexit.png" data-background-size="80%">
@@ -1178,39 +1179,39 @@ for (int i = 0; i < nbLoop; i++) {
 </aside>
 </section>
 
-<section data-transition-speed="slow" data-transition="fade-in" >
+<section data-transition-speed="slow" data-transition="fade-in none" >
 	<img src="coordinated-omission.png" class="stretch no_border_img" />
 </section>
 
-<section data-transition="fade-in">
+<section data-transition="none">
     <img src="schema-co-1.png" class="stretch no_border_img"/>
 </section>
-<section data-transition="fade-in">
+<section data-transition="none">
     <img src="schema-co-2.png" class="stretch no_border_img"/>
 </section>
-<section data-transition="fade-in">
+<section data-transition="none">
     <img src="schema-co-3.png" class="stretch no_border_img"/>
 </section>
-<section data-transition="fade-in">
+<section data-transition="none">
     <img src="schema-co-4.png" class="stretch no_border_img"/>
 </section>
-<section data-transition="fade-in">
+<section data-transition="none">
     <img src="schema-co-5.png" class="stretch no_border_img"/>
 </section>
 	
-<section data-transition="fade-in">
+<section data-transition="none">
     <img src="co-schema-sleep-1.png" class="stretch no_border_img"/>
 </section>
-<section data-transition="fade-in">
+<section data-transition="none">
     <img src="co-schema-sleep-2.png" class="stretch no_border_img"/>
 </section>
-<section data-transition="fade-in">
+<section data-transition="none">
     <img src="co-schema-sleep-3.png" class="stretch no_border_img"/>
 </section>
-<section data-transition="fade-in">
+<section data-transition="none">
     <img src="co-schema-sleep-4.png" class="stretch no_border_img" />
 </section>
-<section data-transition="fade-in">
+<section data-transition="none">
     <img src="co-schema-sleep-5.png" class="stretch no_border_img" />
 </section>
 
