--- a/index.html
+++ b/index.html
@@ -1334,7 +1334,7 @@ for (int i = 0; i < nbLoop; i++) {
 
 			</div>
 		
-		<div class="footer"><p style="color: white">#HdrHistogram @Alex_Victoor</p><img align="right" src="logo-texte-devoxx-france-400.png" /></div>
+		<div class="footer"><p style="color: white">#HdrHistogram @Alex_Victoor http://bit.ly/2nqh0CB</p><img align="right" src="logo-texte-devoxx-france-400.png" /></div>
 
 		
 			</div>
