Tiny style change

--- a/index.html
+++ b/index.html
@@ -270,9 +270,9 @@ Un histogram c'est un outil graphique qui permet de représenter la répartition
 	<div style="margin: 0% 10% 0%" align="left">
 	<p>Probabilité d'éviter le 99ème centile:</p>
 	<ul>
-		<li class="fragment">Sur une requête : 0.99</li>
-		<li class="fragment">Sur 2 requêtes : 0.99 * 0.99 = 0.98</li>
-		<li class="fragment">Sur n requêtes : 0.99^n</li>
+		<li class="fragment">Sur une requête : <span style="font-weight: bold;">0.99</span></li>
+		<li class="fragment">Sur 2 requêtes : <span style="font-weight: bold;">0.99 * 0.99 = 0.98</span></li>
+		<li class="fragment">Sur n requêtes : <span style="font-weight: bold;">0.99^n</span></li>
 	</ul>
 	<br/>
 	<br/>
