--- a/index.html
+++ b/index.html
@@ -173,6 +173,10 @@
 <section data-background="measure-problem.jpg">
 </section>
 
+<section>	
+	<h1>Le quartet d'Anscombe ?</h1>
+</section>
+
 <section data-transition="fade-in">
     <img src="anscombe1.png" class="stretch no_border_img"/>
 </section>
@@ -1197,7 +1201,7 @@ for (int i = 0; i < nbLoop; i++) {
 </section>
 
 <section data-transition-speed="slow" data-transition="fade-in none" >
-	<img src="coordinated-omission.png" class="stretch no_border_img" />
+	<img src="coordinated-omission2.png" class="stretch no_border_img" />
 </section>
 
 <section data-transition="none">
@@ -1229,7 +1233,7 @@ for (int i = 0; i < nbLoop; i++) {
     <img src="co-schema-sleep-4.png" class="stretch no_border_img" />
 </section>
 <section data-transition="none">
-    <img src="co-schema-sleep-5.png" class="stretch no_border_img" />
+    <img src="co-schema-sleep-5b.png" class="stretch no_border_img" />
 </section>
 
 
